# lab_tools

./: .gitignore  LICENSE  README.md  TODOS.md  pyproject.toml  setup.py  testing.py
..rest/: setup.py
..rest/lab_tools/: checking.py  fit_curve.py  linear_regression.py  mean_uncertainty.py  plotting.py
..rest/testsa/: test_file_io.py  test_fit_curve.py  test_linear_regression.py  test_mean_uncertainty.py  test_rounding.py
lab_tools/: __init__.py  checking.py  config.py  curve_fit.py  exceptions.py  file_io.py  fit_curve.py  linear_regression.py  mean_uncertainty.py  plotting.py  rounding.py  uncertainties.py
src/: config.py  core.py  curve_fit.py  dtypes.py  file_io.py  linear_regression.py  validation.py
src/1/: ErrNum.py  ErrNum2.py  main.py
src/lab_tools/: __init__.py  config.py  curve_fit.py  file_io.py  formatting.py  linear_regression.py  test.py  typing.py  validate.py
src/lab_tools/unc/: core.py  formatting.py  ops.py
src/lab_tools/wave/: __init__.py  angle.py  boundary.py  grid.py  grid_template.py  tests.py  wave_function.py
tests/: test_angle.py  test_checking.py  test_curve_fit.py  test_errnum.py  test_file_io.py  test_grid.py  test_linear_regression.py  test_plotting.py  test_rounding.py  test_rounding_rounded_string.py  test_uncertainties.py  test_validate.py
