[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-tools"
version = "0.1.0"
description = "A custom library for report calculations, including data analysis and uncertainty measurement tools."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "jakub627" }]
dependencies = ["numpy>=2.4.1", "pandas>=2.3.3", "pint==0.25", "scipy>=1.16.3"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jakub627/lab_tools"
Source = "https://github.com/jakub627/lab_tools"
Documentation = "https://github.com/jakub627/lab_tools#readme"
Bug-Tracker = "https://github.com/jakub627/lab_tools/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["lab_tools*"]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
